--- a/style.css
+++ b/style.css
@@ -45,7 +45,16 @@
   h6 {
     margin: 0 0 5px 0;
   }
+  h1{
+    text-align: center;
+    font-family: cursive;
+    font-weight: normal; 
+    padding-bottom: 50px;
+  }
   .grid{
+    margin-left:10%;
+    margin-right:20%;
+    
     width: 70%;
     height: 70%;
     display:grid;
@@ -65,4 +74,12 @@
     
     border:2px solid black;
     
+  }
+  form{
+    display:grid;
+    grid-template-columns: 1fr 1fr 20px;
+  }
+  button{
+    margin-left :50px;
+    margin-right:50px;
   }
