--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@
   form{
     display:grid;
     grid-template-columns: 1fr 1fr 20px;
+    grid-gap: 10px;
+    margin-bottom: 15px;
   }
   button{
     margin-left :50px;
