--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    background-color: white;
     
     border:1px solid black;
     
