--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     font-weight: 900;
     font-size: 20px;
     color: var(--black);
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
+    /* text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07); */
   }
   
   /*
@@ -56,6 +56,7 @@
     max-width: 800px;
     text-align: center;
   }
+  
   .grid{
     margin-left:10%;
     margin-right:20%;
