--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   }
   
   html {
-    /* border-box box model allows us to add padding and border to our elements without increasing their size */
+    
     box-sizing: border-box;
     /* A system font stack so things load nice and quick! */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -27,9 +27,8 @@
   }
   
   body {
-    /* background-image: url("./images/topography.svg"),
-      linear-gradient(110deg, #f93d66, #6d47d9); */
-    background-size: 340px, auto;
+    
+          background-size: 340px, auto;
     min-height: calc(100vh - 100px);
     margin: 50px;
     /* background: white; */
@@ -55,31 +54,36 @@
   .main{
     max-width: 800px;
     text-align: center;
+    
+    
   }
   
   .grid{
-    margin-left:10%;
-    margin-right:20%;
     
+    
+
+    align-self: center;
     width: 70%;
     height: 70%;
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 120px 120px 120px;
+    grid-template-rows: 120px 120px 120px;
     align-content: center;
-    border:2px solid black;
+    margin:auto;
+    justify-content:center;
+    
     
     
    
     
   }
   .cell {
-    height: 120px;
+    
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color:transparent;
     
     border:1px solid black;
     
@@ -88,13 +92,38 @@
     
     
   }
-  form{
-    display:grid;
-    grid-template-columns: 1fr 1fr 20px;
-    grid-gap: 10px;
-    margin-bottom: 15px;
-  }
-  button{
-    margin-left :50px;
-    margin-right:50px;
-  }
+ 
+.firstForm, .secondform{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-height:300px;
+  border: 1px solid grey;
+  
+  justify-items: center;
+
+}
+.ok1,.update{
+  grid-column: span 2;
+  width: 100px;
+  height:50px;
+  
+}
+.title{
+  grid-column: span 2;
+}
+input{
+  border-radius: 2px;
+
+}
+.toplay{
+  min-height:40px;
+  font-weight:lighter;
+  font-style: italic;
+}
+img.hidden{
+  display: none;
+}
+.resultbox{
+  display:grid;
+  grid-template-columns:80px 1fr 80px;
+}
